--- a/aula10/index.html
+++ b/aula10/index.html
@@ -13,13 +13,12 @@
     <div>
         <button onclick="changeImage()">Clique aqui</button>
 
-        <img src="
-        img/img1.jpg" alt="img1" id="myImage">
+        <img src="img/img1.jpg" alt="img1" id="myImage">
     </div>
 
     <!-- Div criada para inserir a troca do input-->
      <div>
-        <button>MUDAR TIPO DE INPUT</button>
+        <button onclick="changeType()">MUDAR TIPO DE INPUT</button>
         <input type="text">
      </div>
 
