--- a/aula14/index.html
+++ b/aula14/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Script</title>
+    <title>Exemplo 14</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     
+    <script src="ex14.js"></script>
 </body>
-
 </html>
