--- a/aula14/index.html
+++ b/aula14/index.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo 14</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/5729e0ff2e.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
-    <script src="ex14.js"></script>
+
+    <nav class="navbar">
+
+        <div class="logo">Paisagens</div>
+
+
+        <ul class="nav-links">
+            <li>
+                <a href="">BLOG</a>
+            </li>
+            <li>
+                <a href="">BLOG</a>
+            </li>
+            <li>
+                <a href="">BLOG</a>
+            </li>
+        </ul>
+
+        <div class="mobile-menu" id="mobileMenu">
+
+            <button id="closeButton" class="close">
+                <i class="fas fa-times"></i>
+            </button>
+
+            <ul class="nav-links-mobile">
+                <li>
+                    <a href="">BLOG</a>
+                </li>
+                <li>
+                    <a href="">BLOG</a>
+                </li>
+                <li>
+                    <a href="">BLOG</a>
+                </li>
+            </ul>
+
+        </div>
+ 
+      <button class="hamburger" id="hamburgerButton">
+          <i class="fas fa-bars"></i>
+      </button>
+
+    </nav>
+
+    <div class="container">
+        <h1>Veja as paisagens do Mundo!</h1>
+        <button>Quero conhecer</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
