--- a/aula14/index.html
+++ b/aula14/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-
+<!-- Criamos noddo menu de navegação -->
     <nav class="navbar">
 
+        <!-- Criamos nossa div, para guardar os elementos do header quando estiver em modo desktop-->
         <div class="logo">Paisagens</div>
-
 
         <ul class="nav-links">
             <li>
@@ -28,12 +28,15 @@
             </li>
         </ul>
 
+        <!-- Criamos nossa div, para guardar os elementos do hamburguer quando estiver aberto -->
         <div class="mobile-menu" id="mobileMenu">
 
+            <!-- Botão para ser utilizado para fechamento da lista -->
             <button id="closeButton" class="close">
                 <i class="fas fa-times"></i>
             </button>
 
+            <!-- Essa lista é do Menu Hamburger quando estiver aberto -->
             <ul class="nav-links-mobile">
                 <li>
                     <a href="">BLOG</a>
@@ -47,7 +50,8 @@
             </ul>
 
         </div>
- 
+
+        <!-- Botão de Hamburger, ele está fora da div justamente por ser um elemento singular -->
       <button class="hamburger" id="hamburgerButton">
           <i class="fas fa-bars"></i>
       </button>
@@ -59,7 +63,7 @@
         <button>Quero conhecer</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="ex14.js"></script>
 </body>
 
 </html>
